Revert add-opens change as we want to test without these options